BG-APP/Argo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "thiagoirch.com"
    http:
      paths:
      - path: "/argocd"
        pathType: Prefix
        backend:
          service:
            name: "argocd-server"
            port:
              number: 80
